sumo/tests/dfrouter/errors/network/edge/root__edge#function__ungiven2/options.dfrouter
-n net.net.xml --detector-files=input_tri.det.xml
